<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>1.7.3</version>
        <relativePath />
    </parent>
    <artifactId>cui-http-parent</artifactId>
    <version>3.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <!-- Must be declared: <inceptionYear> is inherited, and the license plugin binds the
         copyright ${year} to it. Without this, cui-http would report cui-parent-pom's 2022. -->
    <inceptionYear>2025</inceptionYear>
    <name>CUI HTTP Parent</name>
    <description>Parent module for CUI HTTP utilities library providing secure validation pipelines,
        SSL/TLS context management, and HTTP client handlers.
    </description>
    <url>https://github.com/cuioss/cui-http/</url>
    <modules>
        <module>cui-http-core</module>
        <module>cui-http-benchmarking</module>
    </modules>
    <scm>
        <url>https://github.com/cuioss/cui-http/</url>
        <connection>scm:git:https://github.com/cuioss/cui-http.git</connection>
        <developerConnection>scm:git:https://github.com/cuioss/cui-http.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/cuioss/cui-http/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
